create github pages

--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">simple responsive web page development software</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2s" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">free html web site builder software</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2s" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -75,7 +75,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><blockquote>"<em>Business enterprise has two–and only two–basic functions: <strong>marketing</strong> &amp; <strong>innovation</strong></em>" -&nbsp;<span style="font-size: 1.09rem; line-height: 1.5;">Peter Drucker</span></blockquote><p><br></p><p>Small to Mid-size organizations, particularly startups and non-profits, innovate with purpose. We founded SaaSify.io with a passion to be your marketing half. Our marketing-as-a-service grows with you to help you succeed in the as-a-service economy: rapidly embrace SaaS business models AND adopt SaaS apps for marketing.</p><p><br></p><p>Organizations rely on marketing to effectively achieve goals and efficiently execute to generate returns. We solve problems in the way:</p><ul><li>strategy not aligned to business goals</li><li>tactics don’t support strategy</li><li>execution disjointed or under-utilize digital</li></ul></div>
+            <div class="col-xs-12 lead"><blockquote>"<em>Business enterprise has two–and only two–basic functions: <strong>marketing</strong> &amp; <strong>innovation</strong></em>" -&nbsp;<span style="font-size: 1.09rem; line-height: 1.5;">Peter Drucker</span></blockquote><p><span style="font-size: 1.07rem; line-height: 1.5;"><br></span></p><p><span style="font-size: 1.07rem; line-height: 1.5;">Small to Mid-size organizations, particularly startups and non-profits, innovate with purpose. We founded SaaSify.io with a passion to be your marketing half. Our marketing-as-a-service grows with you to help you succeed in the as-a-service economy: rapidly embrace SaaS business models AND adopt SaaS apps for marketing.</span><br></p><p><br></p><p>Organizations rely on marketing to effectively achieve goals and efficiently execute to generate returns. We solve problems in the way:</p><ul><li>strategy not aligned to business goals</li><li>tactics don’t support strategy</li><li>execution disjointed or under-utilize digital</li></ul></div>
         </div>
     </div>
 
