--- a/featured-blocks.html
+++ b/featured-blocks.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">top responsive site development software</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader3 mbr-parallax-background mbr-after-navbar" id="extHeader3-3n" style="background-image: url(assets/images/jigsaw-puzzle-concept.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">top drag and drop web design</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader3 mbr-parallax-background mbr-after-navbar" id="extHeader3-3n" style="background-image: url(assets/images/jigsaw-puzzle-concept.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
 
@@ -72,7 +72,7 @@
                             <h3 class="mbr-section-title display-2 text-center">FEATURED MARKETING BLOCKS</h3>
 
                             <div class="mbr-section-text lead text-center">
-                                <p>Select ablocks by growth stage or objective to build your own Marketing-As-A-Service.</p>
+                                <p>Select blocks by growth stage or objective to build your own Marketing-As-A-Service.</p>
                             </div>
 
                             
