--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">top wysiwyg web building</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow" id="header1-1" style="background-image: url(assets/images/way-to-success.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">easy mobile web page building software download</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow" id="header1-1" style="background-image: url(assets/images/way-to-success.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(0, 0, 0);"></div>
 
@@ -147,7 +147,7 @@
                     <div class="card-block" style="margin-top: -150px;">
                         <h4 class="card-title">Marketing Plan</h4>
                         
-                        <p class="card-text">Design campaigns, create calendar, assign budgets/resources to achieve marketing objectives.<br>Connect content &amp; communications across channels: digital &amp; offline.<br></p>
+                        <p class="card-text">Design campaigns, create calendar, assign budgets/resources to achieve marketing objectives.<br>Connect content &amp; communications across channels: digital &amp; traditional.<br></p>
                         
                     </div>
                 </div>
@@ -486,7 +486,7 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-xs-center">
                 <h3 class="mbr-section-title display-2">FOLLOW US</h3>
-                <div><a class="btn btn-social" title="Twitter" target="_blank" href="https://twitter.com/SaaSifyIO"><i class="socicon socicon-twitter"></i></a> <a class="btn btn-social" title="Facebook" target="_blank" href="https://www.facebook.com/pages/SaaSifyIO"><i class="socicon socicon-facebook"></i></a>      <a class="btn btn-social" title="LinkedIn" target="_blank" href="https://www.linkedin.com/company/saasifyio"><i class="socicon socicon-linkedin"></i></a>   </div>
+                <div><a class="btn btn-social" title="Twitter" target="_blank" href="https://twitter.com/SaaSifyIO"><i class="socicon socicon-twitter"></i></a> <a class="btn btn-social" title="Facebook" target="_blank" href="https://www.facebook.com/SaaSifyIO"><i class="socicon socicon-facebook"></i></a>      <a class="btn btn-social" title="LinkedIn" target="_blank" href="https://www.linkedin.com/company/saasifyio"><i class="socicon socicon-linkedin"></i></a>   </div>
             </div>
         </div>
     </div>
