--- a/#marketing-blocks.html
+++ b/#marketing-blocks.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">free bootstrap web page creator software download</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader3 mbr-parallax-background mbr-after-navbar" id="extHeader3-1y" style="background-image: url(assets/images/business-teamwork-on-puzzle-pieces-to-success-1.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">free wysiwyg website maker software download</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader3 mbr-parallax-background mbr-after-navbar" id="extHeader3-1y" style="background-image: url(assets/images/business-teamwork-on-puzzle-pieces-to-success-1.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
 
@@ -226,7 +226,7 @@
                               <div class="galleryItem" href="#lb-extShop1-38" data-slide-to="0" data-toggle="modal">
                               <div class="item_overlay"></div>
                                   <div class="img_wraper">
-                                    <img alt="" src="assets/images/brand-presence-3000x2600-51103.png">
+                                    <img alt="" src="assets/images/brand-presence-3000x2600-51125.png">
                                   </div> 
                                   <span class="onsale" data-onsale="false" style="display: none;">*</span>
                                   <div class="sidebar_wraper"> 
@@ -243,7 +243,7 @@
                               <div class="galleryItem" href="#lb-extShop1-38" data-slide-to="1" data-toggle="modal">
                               <div class="item_overlay"></div>
                                   <div class="img_wraper">
-                                    <img alt="" src="assets/images/product-market-fit-3000x2600-77104.png">
+                                    <img alt="" src="assets/images/product-market-fit-3000x2600-77126.png">
                                   </div> 
                                   <span class="onsale" data-onsale="false" style="display: none;">*</span>
                                   <div class="sidebar_wraper"> 
@@ -260,7 +260,7 @@
                               <div class="galleryItem" href="#lb-extShop1-38" data-slide-to="2" data-toggle="modal">
                               <div class="item_overlay"></div>
                                   <div class="img_wraper">
-                                    <img alt="" src="assets/images/customer-profile-3000x2600-33105.png">
+                                    <img alt="" src="assets/images/customer-profile-3000x2600-33127.png">
                                   </div> 
                                   <span class="onsale" data-onsale="false" style="display: none;">*</span>
                                   <div class="sidebar_wraper"> 
@@ -277,7 +277,7 @@
                               <div class="galleryItem" href="#lb-extShop1-38" data-slide-to="3" data-toggle="modal">
                               <div class="item_overlay"></div>
                                   <div class="img_wraper">
-                                    <img alt="" src="assets/images/sales-enablement-3000x2600-87106.png">
+                                    <img alt="" src="assets/images/sales-enablement-3000x2600-87128.png">
                                   </div> 
                                   <span class="onsale" data-onsale="false" style="display: none;">*</span>
                                   <div class="sidebar_wraper"> 
@@ -294,7 +294,7 @@
                               <div class="galleryItem" href="#lb-extShop1-38" data-slide-to="4" data-toggle="modal">
                               <div class="item_overlay"></div>
                                   <div class="img_wraper">
-                                    <img alt="" src="assets/images/brand-campaign-3000x2600-51107.png">
+                                    <img alt="" src="assets/images/brand-campaign-3000x2600-51129.png">
                                   </div> 
                                   <span class="onsale" data-onsale="false" style="display: none;">*</span>
                                   <div class="sidebar_wraper"> 
@@ -311,7 +311,7 @@
                               <div class="galleryItem" href="#lb-extShop1-38" data-slide-to="5" data-toggle="modal">
                               <div class="item_overlay"></div>
                                   <div class="img_wraper">
-                                    <img alt="" src="assets/images/product-launch-3000x2600-91108.png">
+                                    <img alt="" src="assets/images/product-launch-3000x2600-91130.png">
                                   </div> 
                                   <span class="onsale" data-onsale="false" style="display: none;">*</span>
                                   <div class="sidebar_wraper"> 
@@ -345,7 +345,7 @@
                               <div class="galleryItem" href="#lb-extShop1-38" data-slide-to="7" data-toggle="modal">
                               <div class="item_overlay"></div>
                                   <div class="img_wraper">
-                                    <img alt="" src="assets/images/sales-campaign-3000x2600-12109.png">
+                                    <img alt="" src="assets/images/sales-campaign-3000x2600-12131.png">
                                   </div> 
                                   <span class="onsale" data-onsale="false" style="display: none;">*</span>
                                   <div class="sidebar_wraper"> 
@@ -362,7 +362,7 @@
                               <div class="galleryItem" href="#lb-extShop1-38" data-slide-to="8" data-toggle="modal">
                               <div class="item_overlay"></div>
                                   <div class="img_wraper">
-                                    <img alt="" src="assets/images/brand-affinity-3000x2600-72110.png">
+                                    <img alt="" src="assets/images/brand-affinity-3000x2600-72132.png">
                                   </div> 
                                   <span class="onsale" data-onsale="false" style="display: none;">*</span>
                                   <div class="sidebar_wraper"> 
@@ -379,7 +379,7 @@
                               <div class="galleryItem" href="#lb-extShop1-38" data-slide-to="9" data-toggle="modal">
                               <div class="item_overlay"></div>
                                   <div class="img_wraper">
-                                    <img alt="" src="assets/images/voice-of-customer-3000x2600-58111.png">
+                                    <img alt="" src="assets/images/voice-of-customer-3000x2600-58133.png">
                                   </div> 
                                   <span class="onsale" data-onsale="false" style="display: none;">*</span>
                                   <div class="sidebar_wraper"> 
@@ -396,7 +396,7 @@
                               <div class="galleryItem" href="#lb-extShop1-38" data-slide-to="10" data-toggle="modal">
                               <div class="item_overlay"></div>
                                   <div class="img_wraper">
-                                    <img alt="" src="assets/images/product-adoption-3000x2600-69112.png">
+                                    <img alt="" src="assets/images/product-adoption-3000x2600-69134.png">
                                   </div> 
                                   <span class="onsale" data-onsale="false" style="display: none;">*</span>
                                   <div class="sidebar_wraper"> 
@@ -413,7 +413,7 @@
                               <div class="galleryItem" href="#lb-extShop1-38" data-slide-to="11" data-toggle="modal">
                               <div class="item_overlay"></div>
                                   <div class="img_wraper">
-                                    <img alt="" src="assets/images/customer-advocacy-3000x2600-6113.png">
+                                    <img alt="" src="assets/images/customer-advocacy-3000x2600-6135.png">
                                   </div> 
                                   <span class="onsale" data-onsale="false" style="display: none;">*</span>
                                   <div class="sidebar_wraper"> 
