--- a/featured-blocks.html
+++ b/featured-blocks.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">top drag and drop web design</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader3 mbr-parallax-background mbr-after-navbar" id="extHeader3-3n" style="background-image: url(assets/images/jigsaw-puzzle-concept.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">best responsive web page development</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader3 mbr-parallax-background mbr-after-navbar" id="extHeader3-3n" style="background-image: url(assets/images/jigsaw-puzzle-concept.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
 
@@ -527,7 +527,7 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-xs-center">
                 <h3 class="mbr-section-title display-2">FOLLOW US</h3>
-                <div><a class="btn btn-social" title="Twitter" target="_blank" href="https://twitter.com/SaaSifyIO"><i class="socicon socicon-twitter"></i></a> <a class="btn btn-social" title="Facebook" target="_blank" href="https://www.facebook.com/pages/SaaSifyIO"><i class="socicon socicon-facebook"></i></a>      <a class="btn btn-social" title="LinkedIn" target="_blank" href="https://www.linkedin.com/in/SaaSifyIO"><i class="socicon socicon-linkedin"></i></a>   </div>
+                <div><a class="btn btn-social" title="Twitter" target="_blank" href="https://twitter.com/SaaSifyIO"><i class="socicon socicon-twitter"></i></a> <a class="btn btn-social" title="Facebook" target="_blank" href="https://www.facebook.com/SaaSifyIO"><i class="socicon socicon-facebook"></i></a>      <a class="btn btn-social" title="LinkedIn" target="_blank" href="https://www.linkedin.com/in/SaaSifyIO"><i class="socicon socicon-linkedin"></i></a>   </div>
             </div>
         </div>
     </div>
